2004-04-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* url-util.el (url-debug): Use with-current-buffer.

	* url-nfs.el (url-nfs-file-attributes): Add id-format parameter.
	(url-nfs-create-wrapper): Use new backquote syntax.

	* url-https.el (url-https-file-attributes): Add id-format param.

	* url-http.el (url-http-head-file-attributes)
	(url-http-file-attributes): Add id-format parameter.

	* url-handlers.el: Use new find-file-hook.
	(url-file-attributes): Add id-format parameter.

	* url-file.el (url-file-create-wrapper): Use new backquote syntax.
	(url-file-file-attributes): Add id-format parameter.

	* url-dav.el: Use with-current-buffer.
	(url-dav-process-response): Fix regexps and spurious quote.
	(url-dav-file-attributes): Add id-format param.

2004-04-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* url.el (url-retrieve): Use with-current-buffer.

	* url-http.el (url-http-parse-headers, url-http-file-exists-p):
	Remove unused var `version'.

	* url-handlers.el (url-handler-mode): New minor mode.
	(url-setup-file-name-handlers): Remove.

2004-04-12  John Paul Wallington  <jpw@gnu.org>

	* url-cookie.el (url-cookie-handle-set-cookie): Replace calls
	to obsolete `assoc-ignore-case' with calls to `assoc-string'.

2004-04-11  Dave Love  <fx@gnu.org>

	* url-mailto.el (url-mailto):
	* url-history.el (url-history-setup-save-timer):
	* url-cookie.el (url-cookie-setup-save-timer): Avoid warnings.

	* url-file.el (url-file-build-filename): Don't use
	directory-sep-char.

	* url-auth.el (url-register-auth-scheme): Fix `format' call.

	* url-about.el (url-scheme-registry): Defvar.
	(url-about): Use text/plain.

	* url-vars.el (cl): Don't require.
	(url): Add :version.
	(url-bug-address): Use bug-gnu-emacs.

	* url-util.el (url-hexify-string): Don't give multibyte error
	for char <16.
	(mail-header-extract): Autoload.

	* url-parse.el: Doc fixes.

	* url-ldap.el (ldap): Require.
	(url-ldap): Fix `format' call.
	(url-ldap-certificate-formatter): Avoid warning.
