@@ -1,3 +1,7 @@
+2004-09-20  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* url-handlers.el (url-insert-file-contents): Decode contents.
+
 2004-04-16  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* url-util.el (url-debug): Use with-current-buffer.
